# OpenCVSample

./: CMakeLists.txt  README.md
modules/: CMakeLists.txt
modules/common/: config.h  config.h.in
modules/cutDetector/: CMakeLists.txt
modules/cutDetector/include/: cut_detector.h
modules/cutDetector/src/: cut_detector.cpp
samples/: CMakeLists.txt
samples/sample_circular_cut/: CMakeLists.txt
samples/sample_circular_cut/src/: main.cpp
